src/snapshots/hostlist_parser__tests__Having a closing brace before an opening brace.snap
---
source: src/lib.rs
expression: "parse(\"hostname]00[asdf\")"
---
Err(
    Errors {
        position: 8,
        errors: [
            Expected(
                Token(
                    '[',
                ),
            ),
            Expected(
                Static(
                    "whitespaces",
                ),
            ),
            Expected(
                Static(
                    "letter or digit",
                ),
            ),
            Expected(
                Token(
                    '-',
                ),
            ),
            Expected(
                Token(
                    '.',
                ),
            ),
            Expected(
                Token(
                    ':',
                ),
            ),
            Unexpected(
                Token(
                    'h',
                ),
            ),
        ],
    },
)
