src/snapshots/hostlist_parser__tests__hostlist-3.snap
---
source: src/lib.rs
expression: "hostlist().easy_parse(\"hostname[2,6,7].iml.com,hostname[10,11-12,2-3,5].iml.com,hostname[15-17].iml.com\")"
---
Ok(
    (
        [
            String(
                "hostname",
            ),
            Range(
                [
                    Disjoint(
                        [
                            (
                                0,
                                2,
                            ),
                            (
                                0,
                                6,
                            ),
                            (
                                0,
                                7,
                            ),
                        ],
                    ),
                ],
            ),
            String(
                ".iml.com",
            ),
        ],
        ",hostname[10,11-12,2-3,5].iml.com,hostname[15-17].iml.com",
    ),
)
